Disable use of SystemTime when in wasm32
I think this shoulda allow a std version of ldk to be used in wasm32.
Before the only reason we switched over to no-std is because of the
calls to the system clock. This should make it so those calls won't
happen when built for wasm.

--- a/lightning/Cargo.toml
+++ b/lightning/Cargo.toml
@@ -58,6 +58,9 @@ version = "0.30.2"
 default-features = false
 features = ["bitcoinconsensus", "secp-recovery"]
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+libm = { version = "0.2", default-features = false }
+
 [target.'cfg(ldk_bench)'.dependencies]
 criterion = { version = "0.4", optional = true, default-features = false }
 
